Fix card-inverse text overflow color

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -147,7 +147,7 @@ h1 {
 						bottom: 0;
 						width: 100%;
 						height: 33%;
-						background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, .5));
+						background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
 						pointer-events: none;
 					}
 
@@ -192,6 +192,10 @@ h1 {
 					font-weight: 600;
 					letter-spacing: 1px;
 					cursor: default;
+				}
+
+				.card-text-overflow:before {
+					background: linear-gradient(180deg, rgba($brand-primary, 0), rgba($brand-primary, 1));
 				}
 			}
 		}
